# exllamav2

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels-release-rocm.yml  build-wheels-release.yml  build-wheels-rocm.yml  build-wheels.yml
conversion/: adaptivegptq.py  compile.py  measure.py  qparams.py  quantize.py  tokenize.py
conversion/standard_cal_data/: code.utf8  multilingual.utf8
doc/: convert.md
examples/: batched_inference.py  cfg.py  chat.py  chat_example.ipynb  chat_formatting.py  chat_prompts.py  inference.py  lm_format_enforcer.py  lora.py  minimal_chat.py  multiple_caches.py  speculative.py  streaming.py  ws_server.py
exllamav2/: __init__.py  attn.py  cache.py  compat.py  config.py  embedding.py  ext.py  fasttensors.py  layernorm.py  linear.py  lora.py  mlp.py  model.py  model_init.py  module.py  moe_mlp.py  rmsnorm.py  tokenizer.py  util.py
exllamav2/conversion/: __init__.py  adaptivegptq.py  compile.py  measure.py  optimize.py  quantize.py  tokenize.py
exllamav2/exllamav2_ext/: ext_bindings.cpp  ext_cache.h  ext_norm.h  ext_qattn.h  ext_qmatrix.h  ext_qmlp.h  ext_quant.cpp  ext_safetensors.cpp  ext_safetensors.h
exllamav2/exllamav2_ext/cpp/: safetensors.cpp  safetensors.h  sampling.cpp
exllamav2/exllamav2_ext/cuda/: h_add.cuh  h_gemm.cu  h_gemm.cuh  layer_norm.cuh  q_attn.cuh  q_gemm_kernel.cuh  q_gemm_kernel_gptq.cuh  q_mlp.cuh  quantize.cuh
exllamav2/exllamav2_ext/cuda/comp_units/: kernel_select.cuh
exllamav2/exllamav2_ext/cuda/quant/: qdq_6.cuh
exllamav2/generator/: __init__.py  base.py  sampler.py  streaming.py
exllamav2/generator/filters/: __init__.py  base.py  prefix.py  select.py
exllamav2/server/: __init__.py  websocket.py  websocket_actions.py
exllamav2/tokenizers/: __init__.py  base.py  hf.py  spm.py
scripts/: convert.py  model_diff.py  test_inference.py
tests/: test.py  test_alloc.py  test_autosplit.py  test_batch_latency.py  test_fasttensors.py  test_gemv.py  test_hgemm.py  test_humaneval.py  test_mmlu.py  test_tokenizer.py
util/: convert_safetensors.py  estimate_kld.py  shard.py  unshard.py
