[project]
name = "exllamav2"
authors = [
  { name = "turboderp", email = "11859846+turboderp@users.noreply.github.com" },
]
description = "A neural network trainer (for weebs)"
readme = "README.md"
requires-python = ">=3.8, <3.12"
keywords = [
  "deep-learning",
  "machine-learning",
  "pytorch",
  "transformers",
  "nlp",
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
dependencies = [
  "pandas",
  "ninja",
  "fastparquet",
  "torch>=2.0.1",
  "safetensors>=0.3.2",
  "sentencepiece>=0.1.97",
  "pygments",
  "websockets",
  "regex",
  "setuptools_scm>=8",
]

[project.optional-dependencies]
dev = [
  "datasets",
  "human_eval",
  "lm-format-enforcer>=0.9.0",
  "pydantic>=2.0.0",
]
all = [
  "exllamav2[dev]",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=64",
  "wheel",
  "setuptools_scm>=8",
]

[tool.setuptools_scm]
write_to = "exllamav2/version.py"

[tool.setuptools.packages.find]
namespaces = true
where = ["."]
include = ["exllamav2*"]
exclude = ["exllamav2.tests*"]

[tool.setuptools.package-data]
"*" = [
  "*.css",
  "*.json",
  "*.md",
  "*.txt",
  "*.so",
]

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = ["/usr/lib/*"]

[tool.ruff.lint]
ignore = [
  "F841", # local variable assigned but never used
  "F842", # local variable annotated but never used
  "E501", # line too long - will be fixed in format
]

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
exclude = [
  "exllamav2/_version.py", # generated by setuptools_scm
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-local-folder = ["examples", "tests", "scripts"]
known-first-party = ["exllamav2"]


[tool.pyright]
include = ["src/**"]
exclude = ["/usr/lib/**"]
stubPath = "./typings"
